--- a/package.json
+++ b/package.json
@@ -9,10 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.4.1",
+    "framer-motion": "^4.1.17",
+    "gray-matter": "^4.0.3",
     "next": "11.0.1",
+    "next-mdx-remote": "^3.0.4",
+    "next-seo": "^4.26.0",
     "next-themes": "^0.0.15",
+    "prism-react-renderer": "^1.2.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "reading-time": "^1.4.0",
+    "remark-slug": "^7.0.0",
+    "swr": "^0.5.6"
   },
   "devDependencies": {
     "@types/react": "17.0.15",
