--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.4.1",
+    "date-fns": "^2.23.0",
+    "firebase-admin": "^9.11.1",
     "framer-motion": "^4.1.17",
     "gray-matter": "^4.0.3",
     "next": "11.0.1",
