--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   "dependencies": {
     "@tailwindcss/typography": "^0.4.1",
     "date-fns": "^2.23.0",
+    "esbuild": "^0.12.26",
     "firebase-admin": "^9.11.1",
     "framer-motion": "^4.1.17",
     "gray-matter": "^4.0.3",
+    "mdx-bundler": "^6.0.1",
     "next": "11.0.1",
-    "next-mdx-remote": "^3.0.4",
     "next-seo": "^4.26.0",
     "next-themes": "^0.0.15",
-    "prism-react-renderer": "^1.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "reading-time": "^1.4.0",
@@ -26,11 +26,13 @@
     "swr": "^0.5.6"
   },
   "devDependencies": {
+    "@mapbox/rehype-prism": "^0.7.0",
     "@types/react": "17.0.15",
     "autoprefixer": "^10.3.1",
     "eslint": "7.32.0",
     "eslint-config-next": "11.0.1",
     "postcss": "^8.3.6",
+    "rehype": "^12.0.0",
     "tailwindcss": "^2.2.7",
     "typescript": "4.3.5"
   }
