--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,12 @@
       "@/public/*": ["public/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/_document.js"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "pages/_document.js",
+    "decs.d.ts"
+  ],
   "exclude": ["node_modules"]
 }
